This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2001-05-23 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* log4cpp.spec.in: run ldconfig after install or uninstall. Upped 
	  release# to 3.
	* Makefile.am: in rpm target corrected top_srcdir variable name.

2001-05-19 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Fixed distcheck target.
	* Fixed check target. It runs testNDC, testCategory and 
	  testFixedContextCategory as tests.
	* Added subdir m4 with (common) autoconf macros.
	* Started adding throw() specifiers to methods.
	
2001-04-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Rereleased as 0.2.4b
	MSVC++: Stripped '\r' characters from .dsp and .dsw files.
	MSVC++: Added StringQueueAppender and FixedContextCategory to 
	log4cpp.dsp.
	
2001-04-20 Steve Ostlind <s.ostlind@pentasafe.com>
	MSVC++: build log4cpp library with multithreaded DLL.
	
2001-04-19 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Now also added the files in debian and msvc6 to EXTRA_DIST, so they 
	finally get into the dist tar ball. Sigh.
	
2001-04-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Released as 0.2.4
	Added debian and msvc6 subdirs to autoconf configuration: they were
	missing from the dist target.
	
2001-04-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Made Category subclassable. 
	Added FixedContextCategory class.
	
2001-04-12 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Merged Marcel Harkema's patch for Debian package support.

2001-04-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Added StringQueueAppender class.
	Separated API docs from devel RPM, into a doc RPM.
	
2001-04-10 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Rerelease as 0.2.3b
	Fixed bugs:
	#415056 Win32: log4cpp project file broken
	#415059 Win32: problem with 'using namespace std'
	
2001-04-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Release 0.2.3
	Fixed and resolved Bugs:
	#411711 missing Clock.hh